cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/Meetings_Archived__c.object-meta.xml
<CustomObject>
    <label>Meetings (Archived)</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings (Archived)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>