cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Select the Host Account for this Meeting.</inlineHelpText>
    <label>Account Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>