cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Account_Name_for_Google_integration__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_for_Google_integration__c</fullName>
    <description>This will show in the Event subject in Google calendar</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Name for Google integration</label>
    <length>80</length>
    <type>Text</type>
</CustomField>