cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Buy_Side_Notes__c.field-meta.xml
<CustomField>
    <fullName>Buy_Side_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter notes about the Buy Side.</inlineHelpText>
    <label>Buy Side Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>