cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/C_Suite__c.field-meta.xml
<CustomField>
    <fullName>C_Suite__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will a C-level executive be attending the meeting?</inlineHelpText>
    <label>C-Suite</label>
    <type>Checkbox</type>
</CustomField>