cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Cancellation_Notice__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Notice__c</fullName>
    <description>notice given by meeting requester when cancelled.</description>
    <inlineHelpText>select the advance warning given for the cancellation</inlineHelpText>
    <label>Cancellation Notice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cancellation_Notice</valueSetName>
    </valueSet>
</CustomField>