cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>