cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Traditional Connectivity</fullName>
            </value>
            <value>
                <fullName>Event Connectivity</fullName>
            </value>
            <value>
                <fullName>Help Desk Ticket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>