cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date/Time Closed</label>
    <length>80</length>
    <type>Text</type>
</CustomField>