cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Conference_Layout_Notes__c.field-meta.xml
<CustomField>
    <fullName>Conference_Layout_Notes__c</fullName>
    <description>especially for group meetings: Field dedicated to the screen layout/format for the meeting- specifically for group meetings to make sure that we show the right rooms, do equal size or voice activiated etc.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Conference Layout Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>