cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Select the Meeting Host Contact.</inlineHelpText>
    <label>Contact Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>