cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>