cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/ContactFax__c.field-meta.xml
<CustomField>
    <fullName>ContactFax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Fax</label>
    <type>Phone</type>
</CustomField>