cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/ContactMobile__c.field-meta.xml
<CustomField>
    <fullName>ContactMobile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Mobile</label>
    <type>Phone</type>
</CustomField>