cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Create_Google_Event__c.field-meta.xml
<CustomField>
    <fullName>Create_Google_Event__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this is checked off, an event will be created in the google calendar.</description>
    <inlineHelpText>If this is checked off, an event will be created in the google calendar.</inlineHelpText>
    <label>Create Google Event?</label>
    <type>Checkbox</type>
</CustomField>