cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Create_Meeting_as_an_Event__c.field-meta.xml
<CustomField>
    <fullName>Create_Meeting_as_an_Event__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field will be used in Process Buidler to automatically create a meeting in Events once checked.</description>
    <inlineHelpText>Check this box if the meeting date and time is confirmed and you are ready to add this event automatically to the Salesforce Calendar.</inlineHelpText>
    <label>Create Meeting as an Event?</label>
    <type>Checkbox</type>
</CustomField>