cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>