cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date/Time Opened</label>
    <length>80</length>
    <type>Text</type>
</CustomField>