cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Cross_Boarder_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Cross_Boarder_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this a cross boarder meeting?</inlineHelpText>
    <label>Cross Border Meeting</label>
    <type>Checkbox</type>
</CustomField>