cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Date_time_1_hour_before_trigger__c.field-meta.xml
<CustomField>
    <fullName>Date_time_1_hour_before_trigger__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Hidden field to store the time that is 1 hour before the trigger email should fire.</inlineHelpText>
    <label>Date/time 1 hour before trigger</label>
    <length>80</length>
    <type>Text</type>
</CustomField>