cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Does_this_meeting_save_travel_expense__c.field-meta.xml
<CustomField>
    <fullName>Does_this_meeting_save_travel_expense__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this video meeting eliminate or save travel expenses? Check if True</inlineHelpText>
    <label>Does this meeting save travel expense?</label>
    <type>Checkbox</type>
</CustomField>