cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Domain_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Domain_Restrictions__c</fullName>
    <label>Domain Restrictions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>