cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Estimated_Duration_minutes__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration_minutes__c</fullName>
    <defaultValue>60</defaultValue>
    <inlineHelpText>Enter the estimated number of minutes the meeting will be.</inlineHelpText>
    <label>Estimated Duration (minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>