cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Estimated_Duration_New__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration_New__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Duration</label>
    <length>80</length>
    <type>Text</type>
</CustomField>