cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>