cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Event_Test_date_time__c.field-meta.xml
<CustomField>
    <fullName>Event_Test_date_time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>please enter the expected date and time for testing setup</inlineHelpText>
    <label>Event  Test_date &amp; time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>