cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGM</fullName>
            </value>
            <value>
                <fullName>Analyst Marketing Event</fullName>
            </value>
            <value>
                <fullName>Deal Roadshow</fullName>
            </value>
            <value>
                <fullName>Earnings Release</fullName>
            </value>
            <value>
                <fullName>Expert Event</fullName>
            </value>
            <value>
                <fullName>Field Trips/Visits</fullName>
            </value>
            <value>
                <fullName>Investor Days/Capital Markets Days</fullName>
            </value>
            <value>
                <fullName>NDR</fullName>
            </value>
            <value>
                <fullName>One-off</fullName>
            </value>
            <value>
                <fullName>On-Site Conference</fullName>
            </value>
            <value>
                <fullName>Virtual Conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>