cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Final_Duration_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Final_Duration_of_Meeting__c</fullName>
    <inlineHelpText>How long was the meeting? Please use minutes.</inlineHelpText>
    <label>Final Duration of Meeting (minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>