cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Firewall_Present__c.field-meta.xml
<CustomField>
    <fullName>Firewall_Present__c</fullName>
    <label>Firewall Present?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
                <default>true</default>
                <label>yes</label>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>