cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Google_Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_Meeting_ID__c</fullName>
    <description>This is a field to store the google event id once an event was created in the main company google calendar.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is a field to store the google event id once an event was created in the main company google calendar.</inlineHelpText>
    <label>Google Meeting ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>