cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Guestbook_Required__c.field-meta.xml
<CustomField>
    <fullName>Guestbook_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>if guestbook</inlineHelpText>
    <label>Guestbook Required?</label>
    <type>Checkbox</type>
</CustomField>