cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Host_City__c.field-meta.xml
<CustomField>
    <fullName>Host_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Host City</label>
    <length>45</length>
    <type>Text</type>
</CustomField>