cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Host_Country__c.field-meta.xml
<CustomField>
    <fullName>Host_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the country that the Host meeting takes place.</inlineHelpText>
    <label>Host Country</label>
    <length>45</length>
    <type>Text</type>
</CustomField>