cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Host_End_Date_Time_in_Host_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Host_End_Date_Time_in_Host_Time_Zone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the end date/time of the meeting that is in the host&apos;s time zone.</inlineHelpText>
    <label>Host End Date/Time in Host Time Zone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>