cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Host_Region__c.field-meta.xml
<CustomField>
    <fullName>Host_Region__c</fullName>
    <description>enter region who&apos;s delivery team is most responsible to execute this meeting</description>
    <label>Host Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Americas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>