cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Host_Start_Date_Time_Host_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Host_Start_Date_Time_Host_Time_Zone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the start time of the meeting in the Host&apos;s timezone.</inlineHelpText>
    <label>Host Start Date/Time (Host Time Zone)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>