cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Host_State__c.field-meta.xml
<CustomField>
    <fullName>Host_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The state the meeting was held in.</inlineHelpText>
    <label>Host State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>