cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Host_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Host_Time_Zone__c</fullName>
    <label>Host Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GMT+14:00 Line Is. Time (Pacific/Kiritimati)</fullName>
            </value>
            <value>
                <fullName>GMT+13:00 Tonga Time (Pacific/Tongatapu)</fullName>
            </value>
            <value>
                <fullName>GMT+12:00 New Zealand Standard Time (Pacific/Auckland)</fullName>
            </value>
            <value>
                <fullName>GMT+11:00 Solomon Is. Time (Pacific/Guadalcanal)</fullName>
            </value>
            <value>
                <fullName>GMT+10:30 Australian Central Standard Time ((South Australia) Australia/Adelaide)</fullName>
            </value>
            <value>
                <fullName>GMT+10:00 Australian Eastern Standard Time (Queensland) (Australia/Brisbane)</fullName>
            </value>
            <value>
                <fullName>GMT+09:30 Australian Central Standard Time (Northern Territory) (Australia/Darwin)</fullName>
            </value>
            <value>
                <fullName>GMT+09:00 Japan Standard Time (Asia/Tokyo)</fullName>
            </value>
            <value>
                <fullName>GMT+08:00 Hong Kong Time (Asia/Hong_Kong)</fullName>
            </value>
            <value>
                <fullName>GMT+08:00 Philippines Time (Asia/Manila)</fullName>
            </value>
            <value>
                <fullName>GMT+08:00 China Standard Time (Asia/Shanghai)</fullName>
            </value>
            <value>
                <fullName>GMT+08:00 Singapore Time (Asia/Singapore)</fullName>
            </value>
            <value>
                <fullName>GMT+08:00 China Standard Time (Asia/Taipei)</fullName>
            </value>
            <value>
                <fullName>GMT+08:00 Australian Western Standard Time (Australia/Perth)</fullName>
            </value>
            <value>
                <fullName>GMT+07:00 West Indonesia Time (Asia/Jakarta)</fullName>
            </value>
            <value>
                <fullName>GMT+06:00 Bangladesh Time (Asia/Dhaka)</fullName>
            </value>
            <value>
                <fullName>GMT+05:30 India Standard Time (Asia/Kolkata)</fullName>
            </value>
            <value>
                <fullName>GMT+05:00 Pakistan Time (Asia/Karachi)</fullName>
            </value>
            <value>
                <fullName>GMT+04:30 Afghanistan Time (Asia/Kabul)</fullName>
            </value>
            <value>
                <fullName>GMT+04:00 Gulf Standard Time (Asia/Dubai)</fullName>
            </value>
            <value>
                <fullName>GMT+04:00 Armenia Time (Asia/Yerevan)</fullName>
            </value>
            <value>
                <fullName>GMT+03:30 Iran Daylight Time (Asia/Tehran)</fullName>
            </value>
            <value>
                <fullName>GMT+03:00 East African Time (Africa/Nairobi)</fullName>
            </value>
            <value>
                <fullName>GMT+03:00 Arabia Standard Time (Asia/Baghdad)</fullName>
            </value>
            <value>
                <fullName>GMT+03:00 Moscow Standard Time (Europe/Moscow)</fullName>
            </value>
            <value>
                <fullName>GMT+03:00 Israel Daylight Time (Asia/Jerusalem)</fullName>
            </value>
            <value>
                <fullName>GMT+03:00 Eastern European Summer Time (Europe/Athens)</fullName>
            </value>
            <value>
                <fullName>GMT+02:00 South Africa Standard Time (Africa/Johannesburg)</fullName>
            </value>
            <value>
                <fullName>GMT+02:00 Central European Summer Time (Europe/Paris)</fullName>
            </value>
            <value>
                <fullName>GMT+01:00 Western European Summer Time (Europe/Lisbon)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>