cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/If_so_enter_here__c.field-meta.xml
<CustomField>
    <fullName>If_so_enter_here__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>enter network name and password</inlineHelpText>
    <label>If so, enter here:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>