cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/If_Yes_has_it_been_configured__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_has_it_been_configured__c</fullName>
    <label>If Yes has it been configured?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>