cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/If_yes_has_IT_whitelisted__c.field-meta.xml
<CustomField>
    <fullName>If_yes_has_IT_whitelisted__c</fullName>
    <label>If yes, has IT whitelisted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>