cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the meeting will be invoiced.</inlineHelpText>
    <label>Invoice</label>
    <type>Checkbox</type>
</CustomField>