cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Invoice_Notes__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter in comments about invoicing.</inlineHelpText>
    <label>Invoice Notes</label>
    <type>TextArea</type>
</CustomField>