cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/IsEscalated__c.field-meta.xml
<CustomField>
    <fullName>IsEscalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated</label>
    <type>Checkbox</type>
</CustomField>