cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/IsSelfServiceClosed__c.field-meta.xml
<CustomField>
    <fullName>IsSelfServiceClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed by Self-Service User</label>
    <type>Checkbox</type>
</CustomField>