cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Issuer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Issuer_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter notes about the Issuer.</inlineHelpText>
    <label>Issuer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>