cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/IsVisibleInSelfService__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleInSelfService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible in Self-Service Portal</label>
    <type>Checkbox</type>
</CustomField>