cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/LiveStandby_Screens_Configured__c.field-meta.xml
<CustomField>
    <fullName>LiveStandby_Screens_Configured__c</fullName>
    <label>LiveStandby Screens Configured?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>