cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Livestream_Deliverable_share_method__c.field-meta.xml
<CustomField>
    <fullName>Livestream_Deliverable_share_method__c</fullName>
    <label>Livestream Deliverable (share method)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
            <value>
                <fullName>KV direct Link</fullName>
            </value>
            <value>
                <fullName>Showcase Link</fullName>
            </value>
            <value>
                <fullName>Embed Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>