cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Meeting_Completion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Completion_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter any important information about the meeting after it is completed.</inlineHelpText>
    <label>Meeting Completion Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>