cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Meeting_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_End_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting End Date/Time</label>
    <length>80</length>
    <type>Text</type>
</CustomField>