cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Meeting_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Meeting_End_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting End Date/Time</label>
    <type>DateTime</type>
</CustomField>