cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Meeting_Location_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Location_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter additional information about the locations of the meetings.</inlineHelpText>
    <label>Meeting Location Notes</label>
    <type>TextArea</type>
</CustomField>