cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Meeting_Organizer__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Organizer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Account contact who organized the meeting</inlineHelpText>
    <label>Meeting Organizer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>