cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Meeting_Organizer_Email__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Organizer_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting Organizer Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>