cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Meeting_Organizer_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Organizer_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting Organizer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meetings (Archived)</relationshipLabel>
    <relationshipName>Meetings_Archived</relationshipName>
    <type>Lookup</type>
</CustomField>