cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Meeting_Organizer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Organizer_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting Organizer Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>