cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Meeting_Origination_Dept_Sales__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Origination_Dept_Sales__c</fullName>
    <inlineHelpText>select the client dept type.</inlineHelpText>
    <label>Meeting Origination Dept (Sales)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate/investor Access</fullName>
                <default>true</default>
                <label>Corporate/investor Access</label>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Investment Banking</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Audio</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Transcript</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Analyst Marketing</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>